--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -6,6 +6,19 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: labsegurancacrescer@gmail.com
+    password: dsjmvtthiagaqyas
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+  messages:
+    basename: classpath:messages
 
 server:
   error:
