--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: labsegurancacrescer@gmail.com
-    password: dsjmvtthiagaqyas
+    username: testetestandolabcrescer@gmail.com
+    password: kpgovlkhyqhvahgn
     properties:
       mail:
         smtp:
